# exile-orm

./: .gitignore  CHANGELOG.md  README.md  TODO.md  docker-compose.integration.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  fastapi-integration.md  migrations.md  models.md  query-api.md  quickstart.md  release.md  transactions.md
examples/: benchmark_queries.py  db_ping.py  fastapi_app.py  migration_many_to_many.py  model_create_get.py  model_many_to_many.py  stress_pool.py
exile_orm/: __init__.py
exile_orm/backends/: __init__.py
exile_orm/core/: __init__.py  database.py  exceptions.py
exile_orm/migrations/: __init__.py  commands.py  executor.py  files.py  planner.py  schema.py
exile_orm/model/: __init__.py  base.py  fields.py  meta.py  relations.py
exile_orm/query/: __init__.py  expressions.py  queryset.py  sql.py
scripts/: bump_version.py  release_check.sh  run_local_postgres_checks.sh
tests/integration/: test_connection.py  test_crud_and_transaction.py  test_many_to_many_integration.py  test_migration_many_to_many_integration.py  test_model_create_get.py  test_pool_stability.py
tests/unit/: test_database.py  test_many_to_many.py  test_migrations.py  test_model.py  test_queryset.py  test_relations.py
